# musictl

./: .gitignore  README.md  pyproject.toml
musictl/: __main__.py  config.py  controller.py  cue_splitter.py  file_scanner.py  mpris.py  player.py  playlist_manager.py  ui_manager.py  wofi_executor.py
